--- a/Embedding.ipynb
+++ b/Embedding.ipynb
@@ -148,6 +148,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.038194  , -0.24487001,  0.72812003, -0.39961001,  0.083172  ,\n",
+       "         0.043953  , -0.39140999,  0.3344    , -0.57545   ,  0.087459  ,\n",
+       "         0.28786999, -0.06731   ,  0.30906001, -0.26383999, -0.13231   ,\n",
+       "        -0.20757   ,  0.33395001, -0.33848   , -0.31742999, -0.48335999,\n",
+       "         0.1464    , -0.37303999,  0.34577   ,  0.052041  ,  0.44946   ,\n",
+       "        -0.46970999,  0.02628   , -0.54154998, -0.15518001, -0.14106999,\n",
+       "        -0.039722  ,  0.28277001,  0.14393   ,  0.23464   , -0.31020999,\n",
+       "         0.086173  ,  0.20397   ,  0.52623999,  0.17163999, -0.082378  ,\n",
+       "        -0.71787   , -0.41531   ,  0.20334999, -0.12763   ,  0.41367   ,\n",
+       "         0.55186999,  0.57907999, -0.33476999, -0.36559001, -0.54856998,\n",
+       "        -0.062892  ,  0.26583999,  0.30204999,  0.99774998, -0.80480999,\n",
+       "        -3.0243001 ,  0.01254   , -0.36941999,  2.21670008,  0.72201002,\n",
+       "        -0.24978   ,  0.92136002,  0.034514  ,  0.46744999,  1.10790002,\n",
+       "        -0.19358   , -0.074575  ,  0.23353   , -0.052062  , -0.22044   ,\n",
+       "         0.057162  , -0.15806   , -0.30798   , -0.41624999,  0.37972   ,\n",
+       "         0.15006   , -0.53211999, -0.20550001, -1.25259995,  0.071624  ,\n",
+       "         0.70564997,  0.49744001, -0.42063001,  0.26148   , -1.53799999,\n",
+       "        -0.30223   , -0.073438  , -0.28312001,  0.37103999, -0.25217   ,\n",
+       "         0.016215  , -0.017099  , -0.38984001,  0.87423998, -0.72569001,\n",
+       "        -0.51058   , -0.52028   , -0.1459    ,  0.82779998,  0.27061999], dtype=float32),\n",
+       " 1)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings_index.get('the'), t.word_index['the']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {
     "collapsed": true
@@ -164,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +220,7 @@
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
