--- a/Embedding.ipynb
+++ b/Embedding.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -117,8 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "t = Tokenizer(filters='')\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1140,7 @@
        "  ...])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1160,13 +1162,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('index_word-punc.npy',index_word)"
+    "np.save('index_word_punc.npy',index_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13667"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.load('index_word_punc.npy').item())"
    ]
   },
   {
@@ -1340,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1369,7 @@
        "(13668, 100)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
